...
              onPressed: () {
                setState(() {
                  resultText = "${ApiConstants.baseUrl}/api/containers/get/gujh1yNBfR";
                  status = 1;
                });
              },
              child: const Text("test button"),
            ),
            status == 1
                ? FutureBuilder(
                    future: future,
                    builder: (context, snapshot) {
                      print("4");
...
                          ),
                          ElevatedButton(
                            onPressed: () {
                              provider.containerDb = container.db;
                              Navigator.push(context, MaterialPageRoute(builder: (context) => const OrderPage()));
                            },
                            child: const Text("Dalej"),
                          ),
                        ]);
                      }
                      print("9");
                      return const CircularProgressIndicator();
                    })
...
