{
    "touchScreenInfo": "Przyciśnij Ekran, aby zamówić",
    "pizzaItemLabel": "Pizza",
    "drinksItemLabel": "Napoje",
    "boxesItemLabel": "Opakowania",
    "saucesItemLabel": "Sosy",
    "cancelButtonLabel": "Anuluj",
    "confirmButtonLabel": "Potwierdź",
    "priceToPayInfo": "Kwota do zapłaty",
    "conformationInfo": "System nie wydaje potwierdzenia płatności",
    "paymentButtonLabel": "Dokonaj płatnośc",
    "summaryInfo": "Podsumowanie zamówienia",
    "cancelOrderButtonLabel": "Anuluj zamówienie",
    "editOrderButtonLabel": "Edytuj zamówienie",

    "summaryButtonLabel": "Suma",
    "orderTotalText": "Suma zamówienia",
    "paymentConformationText": "System nie wydaje potwierdzeń płatności",
    "orderSummaryText": "Podsumowanie zamówienia",
    "makePaymentButtonLabel": "Dokonaj płatności",
    "paymentStartedText": "Płatność rozpoczęta",
    "paymentInfoText": "Postępuj zgodnie z instrukcjami wyświetlonymi na terminalu poniżej",
    "paymentCancelledText": "Płatność anulowana",
    "returnButtonLabel": "Powrót",
    "tryAgainButtonLabel": "Spróbuj ponownie",
    "paymentAcceptedText": "Płatność zaakceptowana",
    "pcs": "szt.",

    "enterPhoneNumberText": "Wprowadź numer telefonu",
    "selectAllCheckText": "Zaznacz wszystkie",
    "requiredCheckText": "Wymagane",
    "promotionCheckText": "Promocje",
    "optionalCheckText": "Opcjonalne",

    "begPopupTitle": "Hej! Tylko tyle?",
    "begPopupInformation": "Sprawdź jeszcze naszą pozostałą część oferty i dokończ składanie zamówienia, bądź przejdź do podsumowania zakupów",
    "productPropositionText": "Proponowane Produkty",
    "goToSummaryButtonLabel": "Przejdź do Podsumowania"
}
