...
                              print(jsonDecode(value)['token']);
                            });
                            Navigator.push(context, MaterialPageRoute(builder: (context) => const StartScreenKiosk()));
                          }
                        });
                      },
                      child: const Text("zaloguj"),
                    ),
                  )
                : Text(provider.phoneNumberToken)
          ],
        ),
      ),
...
